--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,46 +1,44 @@
-name: Hugo Actions # 名字自取
+name: Hugo Build and Deploy # 更新名称
 
 on:
   push:
     branches:
-      - main  # 这里的意思是当 main 分支发生 push 的时候，运行下面的 jobs
+      - main
 
 jobs:
   deploy: 
-    runs-on: ubuntu-latest 	# 在什么环境运行任务
+    runs-on: ubuntu-latest
+    permissions: # 添加必要权限
+      contents: write
+      pages: write
+      id-token: write
+      
     steps:
-      - uses: actions/checkout@v4   # 引用 actions/checkout 这个 action，与所在的 github 仓库同名
+      - uses: actions/checkout@v4
         with:
-         submodules: true  # Fetch Hugo themes (true OR recursive) 获取 submodule 主题
-         fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+          submodules: true
+          fetch-depth: 0
          
-      - name: Setup Hugo	# 步骤名自取
-        uses: peaceiris/actions-hugo@v2   # Hugo 官方提供的 action，用于在任务环境中获取 hugo
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.122.0'	# 获取指定版本的 hugo
+          hugo-version: '0.122.0'
           extended: false
 
       - name: Build Site
         run: |
-          pwd
-          ls
           cp -R exampleSite/* .
-          hugo --themesDir ../ --baseURL https://webstack-hugo.weiyan.cc/
+          hugo --minify --themesDir ../ --baseURL ${{ steps.pages.outputs.base_url }}/
           
-      - name: Deploy Pages
-        uses: peaceiris/actions-gh-pages@v3	  # 一个自动发布 github pages 的 action
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v4
+        
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          external_repository: shenweiyan/WebStack-Hugo	  # 发布到哪个 repo
-          personal_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}	# 发布到其他 repo 需要在对应的 repo 上粘贴生成的 personal_access_token
-          #1. 创建 Personal_Access_Token：
-          #   GitHub 个人账号 -> Settings -> Developer settings -> Personal access tokens ->  Tokens (classic) -> New personal access token (classic)
-          #   - Expiration: No expiration
-          #   - Select scopes: 全选
-          #2. 粘贴 Personal_Access_Token：
-          #   进入目标 repo -> Settings -> Security -> Secrets and variables -> Actions，选择 New repository secret -> 粘贴前面生成的 personal_access_token
-          publish_dir: ./public	
-          #注意这里指的是 Pages 要发布哪个文件夹的内容，而不是指发布到目标仓库的什么位置；因为 hugo 默认生成静态网页到 public 文件夹，所以这里发布 public 文件夹里的内容。
-          publish_branch: gh-pages	# 发布到哪个 branch
-          force_orphan: true
-          cname: webstack-hugo.weiyan.cc
-          full_commit_message: ${{ github.event.head_commit.message }}
+          path: ./public
+          
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+        if: ${{ success() }}
