--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,4 +1,4 @@
-name: Hugo Build and Deploy # 更新名称
+name: Hugo Build and Deploy
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy: 
     runs-on: ubuntu-latest
-    permissions: # 添加必要权限
+    permissions:
       contents: write
       pages: write
       id-token: write
@@ -28,12 +28,9 @@ jobs:
       - name: Build Site
         run: |
           cp -R exampleSite/* .
-          hugo --minify --themesDir ../ --baseURL ${{ steps.pages.outputs.base_url }}/
+          hugo --minify --themesDir ../ --baseURL "https://${{ github.repository_owner }}.github.io/${{ github.repository_name }}/"
           
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v4
-        
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
@@ -41,4 +38,3 @@ jobs:
           
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4
-        if: ${{ success() }}
